random number printing to div

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 #num1 {
   font-size: 100px;
-  font-color: red;
+  color: red;
   font-family: sans-serif;
   background-color: blue;
   text-align: center;
