--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,8 @@
-#Row1 {
+#Col1 {
   float: left;
+  width: 100%
 }
-#Row2 {
-  float: inherit;
-}
-#Row3 {
-  float: right;
-}
-/*#num1 {
+#num1 {
   height: 200px;
    background: #000;
    font-size: 48px;
@@ -16,8 +11,10 @@
    text-align: center;
    margin-top: 20px;
    margin-left: 5px;
-   width: 33.33%;
-  line-height: 100px;
+   width: 30%;
+  line-height: 200px;
+  border:2px solid blue;
+  display: inline-block;
 }
 #num2 {
   height: 200px;
@@ -28,8 +25,10 @@
    text-align: center;
    margin-top: 20px;
    margin-left: 5px;
-   width: 33.33%;
-  line-height: 100px;
+   width: 30%;
+  line-height: 200px;
+    border:2px solid blue;
+    display: inline-block;
 }
 #num3 {
   height: 200px;
@@ -40,8 +39,14 @@
    text-align: center;
    margin-top: 20px;
    margin-left: 5px;
-   width: 33.33%;
-  line-height: 100px;
+   width: 30%;
+  line-height: 200px;
+  border:2px solid blue;
+display: inline-block;
+}
+#Col2 {
+  float: right;
+  width: 100%
 }
 #num4 {
   height: 200px;
@@ -50,10 +55,12 @@
    font-style: oblique;
    color: #FFF;
    text-align: center;
-   margin-top: 20px;
+   margin-top: 5px;
    margin-left: 5px;
-   width: 33.33%;
-  line-height: 100px;
+   width: 30%;
+  line-height: 200px;
+  display: inline-block;
+    border:2px solid blue;
 }
 #num5 {
   height: 200px;
@@ -62,10 +69,12 @@
    font-style: oblique;
    color: #FFF;
    text-align: center;
-   margin-top: 20px;
+   margin-top: 5px;
    margin-left: 5px;
-   width: 33.33%;
-  line-height: 100px;
+   width: 30%;
+  line-height: 200px;
+display: inline-block;
+  border:2px solid blue;
 }
 #num6 {
   height: 200px;
@@ -74,10 +83,16 @@
    font-style: oblique;
    color: #FFF;
    text-align: center;
-   margin-top: 20px;
+   margin-top: 5px;
    margin-left: 5px;
-   width: 33.33%;
-  line-height: 100px;
+   width: 30%;
+  line-height: 200px;
+display: inline-block;
+  border:2px solid blue;
+}
+#Col3 {
+  float: right;
+  width: 100%;
 }
 #num7 {
   height: 200px;
@@ -86,10 +101,12 @@
    font-style: oblique;
    color: #FFF;
    text-align: center;
-   margin-top: 20px;
+   margin-top: 5px;
    margin-left: 5px;
-   width: 33.33%;
-  line-height: 100px;
+   width: 30%;
+  line-height: 200px;
+display: inline-block;
+  border:2px solid blue;
 }
 #num8 {
   height: 200px;
@@ -98,10 +115,12 @@
    font-style: oblique;
    color: #FFF;
    text-align: center;
-   margin-top: 20px;
+   margin-top: 5px;
    margin-left: 5px;
-   width: 33.33%;
-  line-height: 100px;
+   width: 30%;
+  line-height: 200px;
+display: inline-block;
+  border:2px solid blue;
 }
 #num9 {
   height: 200px;
@@ -110,8 +129,10 @@
    font-style: oblique;
    color: #FFF;
    text-align: center;
-   margin-top: 20px;
+   margin-top: 5px;
    margin-left: 5px;
-   width: 33.33%;
-  line-height: 100px;
-}*/
+   width: 30%;
+  line-height: 200px;
+display: inline-block;
+  border:2px solid blue;
+}
